--- a/css/events.css
+++ b/css/events.css
@@ -771,7 +771,7 @@
         font-size: 2.5rem;
     }
 
-    .event-filters {
+    .event-controls {
         margin-top: var(--spacing-md);
     }
     
